--- a/assets/content/lesson/setting-the-intiial-project-and-publish-your-first-post.json
+++ b/assets/content/lesson/setting-the-intiial-project-and-publish-your-first-post.json
@@ -3,5 +3,5 @@
   "title": "Setting the Intiial Project and Publish Your First Post",
   "description": "First iteration of the project from design to code and deployed.",
   "video_link": "https://www.youtube.com/watch?v=KjoH1ZZrAik",
-  "body": "Here is how the Plasma Wakefield Accelerator Work..."
+  "body": "Here is how the Plasma Wakefield Accelerator Work...\n\n[![Plasma Wakefield Accelerator](https://img.youtube.com/vi/KjoH1ZZrAik/0.jpg)](https://www.youtube.com/watch?v=KjoH1ZZrAik)"
 }
