--- a/assets/content/lesson/deploying-the-web-app-using-netlify-and-github.json
+++ b/assets/content/lesson/deploying-the-web-app-using-netlify-and-github.json
@@ -3,5 +3,5 @@
   "title": "Deploying the web app using Netlify and Github",
   "description": "What does the thing say about other important stuffs",
   "body": "Some sample content",
-  "video_link": "https://www.youtube.com/watch?v=5Ryp6UTCeUo&t=24s"
+  "video_id": "5Ryp6UTCeUo&t=24s"
 }
