--- a/assets/content/lesson/setting-the-initial-project-and-publish-your-first-post.json
+++ b/assets/content/lesson/setting-the-initial-project-and-publish-your-first-post.json
@@ -2,6 +2,6 @@
   "date": "2020-06-22T05:07:35.113Z",
   "title": "Setting the Initial Layout and Boiler Plate",
   "description": "First iteration of the project from design to code and deployed.",
-  "video_link": "https://www.youtube.com/watch?v=KjoH1ZZrAik",
+  "video_id": "KjoH1ZZrAik",
   "body": "Here is how the Plasma Wakefield Accelerator Work...\n"
 }
