--- a/assets/content/lesson/setting-the-intiial-project-and-publish-your-first-post.json
+++ b/assets/content/lesson/setting-the-intiial-project-and-publish-your-first-post.json
@@ -3,5 +3,6 @@
   "title": "Setting the Initial Layout and Boiler Plate",
   "description": "First iteration of the project from design to code and deployed.",
   "video_link": "https://www.youtube.com/watch?v=KjoH1ZZrAik",
-  "body": "Here is how the Plasma Wakefield Accelerator Work...\n"
+  "body": "Here is how the Plasma Wakefield Accelerator Work...\n",
+  "video_id": "Brl7WmHDG-E"
 }
