Addicted to Danger

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sohei-0622",
+  "name": "Full Stack Sohei - Mastering Full Stack Development",
   "version": "1.0.0",
   "private": true,
   "scripts": {
