--- a/assets/content/lesson/deploying-the-web-app-using-netlify-and-github.json
+++ b/assets/content/lesson/deploying-the-web-app-using-netlify-and-github.json
@@ -2,7 +2,7 @@
   "date": "2020-06-22T09:02:12.618Z",
   "title": "Deploying the web app using Netlify and Github",
   "description": "What does the thing say about other important stuffs",
-  "body": "Some sample content",
+  "body": "Some sample content\n\n\n\n![](/img/screen-shot-2020-08-18-at-8.52.54-pm.png)",
   "video_link": "https://www.youtube.com/watch?v=5Ryp6UTCeUo&t=24s",
   "video_id": "b41K3xEmuoY"
 }
